sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value getVaLeur
    var v = getVaLeur(i)
            ^